Pad Carousel viewport to prevent category cards' focus border overflow

--- a/packages/frontend/src/features/HomepageContent/components/CategoryCards/index.module.css
+++ b/packages/frontend/src/features/HomepageContent/components/CategoryCards/index.module.css
@@ -113,6 +113,10 @@
 }
 
 .Carousel-viewport {
+    position: relative;
+    left: -4px;
+
+    width: calc(100% + 8px);
     padding: 4px;
 }
 
